# eulerlauncher

./: AUTHORS  ChangeLog  EulerLauncher-MacOS.spec  EulerLauncherd-Mac.spec  OmniVirt-MacOS.spec  OmniVirtd-Mac.spec  README-en.md  README.en.md  README.md  backends.py  cli.spec  install.spec  requirements-win.txt  requirements.txt  setup.cfg  setup.py  vm_operations.proto  vm_operations_client.py  vm_operations_pb2.py  vm_operations_pb2_grpc.py  vm_operations_service.py
docs/: developer-manual.md  mac-user-manual.md  win-user-manual.md
etc/: eulerlauncher-win.conf  eulerlauncher.conf  supported_images.json
eulerLauncher-ui/: package.json
eulerLauncher-ui/api/: api.py
eulerLauncher-ui/gui/: vite.config.js
eulerLauncher-ui/gui/src/: App.vue  main.js
eulerLauncher-ui/pyapp/config/: config.py
eulerlauncher/: cli.py  eulerlauncherd.py  install.py  macos-gui.py
eulerlauncher/backends/: flavor_handler.py
eulerlauncher/backends/mac/: image_handler.py  instance_handler.py  qemu.py
eulerlauncher/backends/win/: image_handler.py  instance_handler.py  powershell.py  qemu.py  vmops.py
eulerlauncher/grpcs/: client.py  flavors.py  images.py  instances.py
eulerlauncher/grpcs/eulerlauncher_grpc/: flavors.proto  flavors_pb2.py  flavors_pb2_grpc.py  images.proto  images_pb2.py  images_pb2_grpc.py  instances.proto  instances_pb2.py  instances_pb2_grpc.py
eulerlauncher/services/: flavor_service.py  imager_service.py  instance_service.py
eulerlauncher/utils/: constants.py  exceptions.py  objs.py  utils.py
omnivirt/: cli.py  install.py  macos-gui.py  omnivirtd.py
omnivirt/backends/mac/: image_handler.py  instance_handler.py  qemu.py
omnivirt/backends/win/: image_handler.py  vmops.py  (+1 more)
omnivirt/grpcs/: client.py  images.py  instances.py
omnivirt/services/: imager_service.py  instance_service.py
omnivirt/utils/: exceptions.py  objs.py  utils.py
specs/: EulerLauncher-MacOS.spec  EulerLauncherd-Mac.spec  EulerLauncherd-win.spec  cli-mac.spec  cli-win.spec  install.spec
(+12 files in other folders)
