[metadata]
name = omnivirt
version = 0.1
summary = A tool to run openEuler instances on all platforms
description_file =
    README.md
author = Zhenyu Zheng
author_email = zheng.zhenyu@outlook.com
python_requires = >=3.8
url = https://github.com/ZhengZhenyu/omnivirt.git
classifiers =
    Development Status :: 3 - Alpha
    Environment :: OmniVirt
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Mulan PSL v2
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]

packages =
    omnivirt

[entry_points]
console_scripts =
    omnivirt = omnivirt.cli:main