[metadata]
name = eulerlauncher
version = 0.2
summary = A tool to run openEuler instances on all platforms
description_file =
    README.md
author = Zhenyu Zheng
author_email = zheng.zhenyu@outlook.com
python_requires = >=3.8
url = https://gitee.com/openeuler/eulerlauncher.git
classifiers =
    Development Status :: 3 - Alpha
    Environment :: OmniVirt
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Mulan PSL v2
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]

packages =
    eulerlauncher

[entry_points]
console_scripts =
    eulerlauncher = eulerlauncher.cli:main